--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder3.png">
+          <img class="card-img-top" src="assets/img/rsz_dermatita.jpg">
           <div class="card-body">
             <h4 class="card-title">Dermatita Atopică</h4>
-            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
+            <p class="card-text">Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu vârsta în 80% din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime a pielii.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -192,10 +192,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder3.png">
+          <img class="card-img-top" src="assets/img/rsz_dermac.jpg">
           <div class="card-body">
             <h4 class="card-title">Dermatita de contatct</h4>
-            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
+            <p class="card-text">Este o reacție alergică localizată, produsă de contactul dintre un alergen și tegumentul unei persoane. Se manifestă prin erupție localizată la locul de contact, de tip eczematos, de multe ori cu vezicule și edem.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -203,10 +203,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder2.png">
+          <img class="card-img-top" src="assets/img/rsz_food.jpg">
           <div class="card-body">
             <h4 class="card-title">Alergia Alimentară</h4>
-            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
+            <p class="card-text">Este o reacție de hipersensibilitate mediată imun (reacție a sistemului imunitar) , o apărare exagerată a organismului declanșată în urma ingestiei unor alimente sau aditivi alimentari, considerați periculoși de către organism.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -214,10 +214,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder1.png">
+          <img class="card-img-top" src="assets/img/rsz_1intoleranta.jpg">
           <div class="card-body">
             <h4 class="card-title">Intoleranță Alimetară</h4>
-            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
+            <p class="card-text">Este o hipersensibilitate individuală la un aliment pe care cei mai mulți oameni îl tolerează fără probleme. Se manifestă în special la nivelul sistemului digestiv, având ca și consecințe: inflamația intestinală și scăderea secreției de serotonină în intestine. </p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
