--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
   <div class="container-fluid padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
-        <h2>Text mare</h2>
+        <h2>Ce sunt alergiile?</h2>
         <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
           spare ribs strip steak turkey.</p>
 
         <p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
           t-bone chicken shankle.</p>
         <br>
-        <a href="#" class="btn btn-primary">Detalii</a>
+        <a href="#" class="btn btn-primary">Citește mai multe detalii</a>
       </div>
       <div class="col-lg-6">
         <img src="assets/img/placeholder3.png" class="img-fluid">
