--- a/index.html
+++ b/index.html
@@ -130,16 +130,14 @@
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
         <h2>Ce sunt alergiile?</h2>
-        <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
-          spare ribs strip steak turkey.</p>
+        <p>Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive pentru majoritatea oamenilor.</p>
 
-        <p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
-          t-bone chicken shankle.</p>
+        <p>Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.</p>
         <br>
         <a href="#" class="btn btn-primary">Citește mai multe detalii</a>
       </div>
       <div class="col-lg-6">
-        <img src="assets/img/placeholder3.png" class="img-fluid">
+        <img src="assets/img/alergie.jpg" class="img-fluid">
       </div>
     </div>
   </div>
