toggel button fixed

--- a/index.html
+++ b/index.html
@@ -25,35 +25,37 @@
   <header id="header">
     <div class="container">
 
-      <div id="logo">
-        <a href="./index.html">
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="./index.html">
           <img src="./assets/img/logo-mic.png">
         </a>
-      </div>
+        <button class="btn-primary navbar-toggle float-right sandwich" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto nav-menu">
+            <li class="nav-item active">
+              <a class="nav-link" href="./index.html">Acasă</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./about.html">Despre noi</a>
+            </li>
+            <li>
+              <a class="nav-link" href="#">Servicii</a>
+            </li>
+            <li>
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li>
+              <a class="nav-link" href="#" class="btn-get-started" id="login">Login</a>
+            </li>
+          </ul>
 
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li class="menu-active">
-            <a href="#">Acasă</a>
-          </li>
-          <li>
-            <a href="about.html">Despre noi</a>
-          </li>
-          <li>
-            <a href="#">Servicii</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-          <li>
-            <a href="#" class="btn-get-started">Login</a>
-          </li>
-        </ul>
+        </div>
       </nav>
-      <button class="btn-primary navbar-toggle float-right sandwich" data-toggle="collapse" data-target="#nav-menu-container">
-        <i class="fas fa-bars"></i>
-      </button>
+
     </div>
   </header>
 
@@ -129,15 +131,17 @@
   <div class="container-fluid padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
-        <h2>Ce sunt alergiile?</h2>
-        <p>Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive pentru majoritatea oamenilor.</p>
+        <h2>Text mare</h2>
+        <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
+          spare ribs strip steak turkey.</p>
 
-        <p>Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.</p>
+        <p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
+          t-bone chicken shankle.</p>
         <br>
-        <a href="#" class="btn btn-primary">Citește mai multe detalii</a>
+        <a href="#" class="btn btn-primary">Detalii</a>
       </div>
       <div class="col-lg-6">
-        <img src="assets/img/alergie.jpg" class="img-fluid">
+        <img src="assets/img/placeholder3.png" class="img-fluid">
       </div>
     </div>
   </div>
@@ -160,7 +164,9 @@
           <img class="card-img-top" src="assets/img/rsz_alergia-la-polen.jpg">
           <div class="card-body">
             <h4 class="card-title">Rinita Alergică</h4>
-            <p class="card-text">Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este în creștere, din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru tratarea infecțiilor respiratorii în copilarie.</p>
+            <p class="card-text">Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este
+              în creștere, din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru
+              tratarea infecțiilor respiratorii în copilarie.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -171,7 +177,9 @@
           <img class="card-img-top" src="assets/img/astm1.jpg">
           <div class="card-body">
             <h4 class="card-title">Astmul Bronșic</h4>
-            <p class="card-text">Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere. În România, prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se estimeaza ca 60% sunt la copii și tineri.</p>
+            <p class="card-text">Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere.
+              În România, prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se
+              estimeaza ca 60% sunt la copii și tineri.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -182,7 +190,9 @@
           <img class="card-img-top" src="assets/img/rsz_dermatita.jpg">
           <div class="card-body">
             <h4 class="card-title">Dermatita Atopică</h4>
-            <p class="card-text">Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu vârsta în 80% din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime a pielii.</p>
+            <p class="card-text">Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu
+              vârsta în 80% din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime
+              a pielii.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -193,7 +203,8 @@
           <img class="card-img-top" src="assets/img/rsz_dermac.jpg">
           <div class="card-body">
             <h4 class="card-title">Dermatita de contatct</h4>
-            <p class="card-text">Este o reacție alergică localizată, produsă de contactul dintre un alergen și tegumentul unei persoane. Se manifestă prin erupție localizată la locul de contact, de tip eczematos, de multe ori cu vezicule și edem.</p>
+            <p class="card-text">Este o reacție alergică localizată, produsă de contactul dintre un alergen și tegumentul unei persoane. Se manifestă
+              prin erupție localizată la locul de contact, de tip eczematos, de multe ori cu vezicule și edem.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -204,7 +215,8 @@
           <img class="card-img-top" src="assets/img/rsz_food.jpg">
           <div class="card-body">
             <h4 class="card-title">Alergia Alimentară</h4>
-            <p class="card-text">Este o reacție de hipersensibilitate mediată imun (reacție a sistemului imunitar) , o apărare exagerată a organismului declanșată în urma ingestiei unor alimente sau aditivi alimentari, considerați periculoși de către organism.</p>
+            <p class="card-text">Este o reacție de hipersensibilitate mediată imun (reacție a sistemului imunitar) , o apărare exagerată a organismului
+              declanșată în urma ingestiei unor alimente sau aditivi alimentari, considerați periculoși de către organism.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -215,7 +227,9 @@
           <img class="card-img-top" src="assets/img/rsz_1intoleranta.jpg">
           <div class="card-body">
             <h4 class="card-title">Intoleranță Alimetară</h4>
-            <p class="card-text">Este o hipersensibilitate individuală la un aliment pe care cei mai mulți oameni îl tolerează fără probleme. Se manifestă în special la nivelul sistemului digestiv, având ca și consecințe: inflamația intestinală și scăderea secreției de serotonină în intestine. </p>
+            <p class="card-text">Este o hipersensibilitate individuală la un aliment pe care cei mai mulți oameni îl tolerează fără probleme.
+              Se manifestă în special la nivelul sistemului digestiv, având ca și consecințe: inflamația intestinală și scăderea
+              secreției de serotonină în intestine. </p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
