--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="./assets/img/avatars/1.jpg" alt=""></div>
-              <h4>Toderica Alexandru</h4>
+              <h4>Toderică Alexandru</h4>
               <div class="aboutsocial">
                 <a target="_blank" class="icon" href="https://www.facebook.com/alexandru.toderica"><i class="ion-social-facebook"></i></a>
                 <a target="_blank" class="icon" href="https://www.instagram.com/toderrrica/"><i class="ion-social-instagram"></i></a>
