--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto nav-menu">
             <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Acasă</a>
+              <a class="nav-link" href="./">Acasă</a>
             </li>
             <li>
               <a class="nav-link" href="./about.html">Despre noi</a>
@@ -131,17 +131,20 @@
   <div class="container-fluid padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
-        <h2>Text mare</h2>
-        <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
-          spare ribs strip steak turkey.</p>
+        <h2>Ce sunt alergiile?</h2>
+        <p>Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt
+          cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen,
+          proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive
+          pentru majoritatea oamenilor.</p>
+        
 
-        <p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
-          t-bone chicken shankle.</p>
-        <br>
-        <a href="#" class="btn btn-primary">Detalii</a>
+        <p>Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări
+          ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.</p>
+        
+        <a href="#" class="btn btn-primary">Citește mai multe detalii</a>
       </div>
       <div class="col-lg-6">
-        <img src="assets/img/placeholder3.png" class="img-fluid">
+        <img src="assets/img/alergie.jpg" class="img-fluid">
       </div>
     </div>
   </div>
