--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto nav-menu">
             <li class="nav-item active">
-              <a class="nav-link" href="./">Acasă</a>
+              <a class="nav-link" href="./index.html">Acasă</a>
             </li>
             <li>
               <a class="nav-link" href="./about.html">Despre noi</a>
