small bug fixes la design

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </section>
 
   <!--- Jumbotron -->
-  <div class="container-fluid">
+  <div class="container">
     <div class="row jumbotron">
       <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
         <p class="lead">Bacon ipsum dolor amet boudin pig andouille, buffalo jowl cow venison pork loin frankfurter. Short loin turducken
@@ -87,7 +87,7 @@
   </div>
 
   <!--- Welcome Section -->
-  <div class="container-fluid padding">
+  <div class="container padding">
     <div class="row welcome text-center">
       <div class="col-12">
         <h1 class="display-4">Text frumos</h1>
@@ -102,7 +102,7 @@
   </div>
 
   <!--- 3 Column Section -->
-  <div class="container-fluid padding">
+  <div class="container padding">
     <div class="row text-center padding">
       <div class="col-xs-12 col-sm-6 col-md-4">
         <i class="fas fa-allergies"></i>
@@ -128,7 +128,7 @@
   </div>
 
   <!--- 2 Column Section -->
-  <div class="container-fluid padding">
+  <div class="container padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
         <h2>Ce sunt alergiile?</h2>
@@ -151,7 +151,7 @@
   <hr class="my-4">
 
   <!--- Cards Title -->
-  <div class="container-fluid padding">
+  <div class="container padding">
     <div class="row welcome text-center">
       <div class="col-12">
         <h1 class="display-4">Diverse Alergii</h1>
@@ -160,7 +160,7 @@
   </div>
 
   <!--- Cards Section -->
-  <div class="container-fluid padding">
+  <div class="container padding">
     <div class="row padding">
       <div class="col-md-4">
         <div class="card">
@@ -242,7 +242,7 @@
   </div>
 
   <!--- 2 Column Section -->
-  <div class="container-fluid padding">
+  <div class="container padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
         <h2>Text mare</h2>
@@ -264,7 +264,7 @@
   <section id="contact">
 
     <div class="social-links">
-      <div class="container-fluid padding">
+      <div class="container padding">
         <div class="row text-center padding">
           <div class="col-12">
             <h1>Contactează-ne</h1>
