--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
   </section>
 
   <!--- Jumbotron -->
-  <div class="container">
+  <div class="container-fluid">
     <div class="row jumbotron">
+	  <div class="container">
       <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
         <p class="lead">Bacon ipsum dolor amet boudin pig andouille, buffalo jowl cow venison pork loin frankfurter. Short loin turducken
           buffalo boudin beef rump ball tip. Pastrami kielbasa pork buffalo swine drumstick. Biltong pancetta chuck ribeye.
@@ -78,6 +79,7 @@
           ball tip.
         </p>
       </div>
+	  </div>
       <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
         <a href="#">
           <button type="button" class="btn btn-outline-secondary btn-lg">Buton</button>
