--- a/index.html
+++ b/index.html
@@ -22,47 +22,30 @@
 <body>
 
   <!-- Navigation -->
-  <header id="header">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-
-      <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="./index.html">
-          <img src="./assets/img/logo-mic.png">
-        </a>
-        <button class="btn-primary navbar-toggle float-right sandwich" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto nav-menu">
-            <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Acasă</a>
-            </li>
-            <li>
-              <a class="nav-link" href="./about.html">Despre noi</a>
-            </li>
-            <li>
-              <a class="nav-link" href="#">Servicii</a>
-            </li>
-            <li>
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li>
-              <a class="nav-link" href="#" class="btn-get-started" id="login">Login</a>
-            </li>
-          </ul>
-
-        </div>
-      </nav>
-
+      <a class="navbar-brand m-auto d-none" href="."><img src="assets/img/logo-green.png" /></a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="icon-bar top-bar"></span>
+        <span class="icon-bar middle-bar"></span>
+        <span class="icon-bar bottom-bar"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav m-auto">
+          <li class="nav-item"><a class="nav-link" href=".">Acasă</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Despre noi</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Servicii</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+        </ul>
+      </div>
     </div>
-  </header>
+  </nav>
 
   <!-- Carousel V2 -->
   <section id="carousel">
     <div class="carousel-container">
-      <h1 class="display-2">AllergyHelp</h1>
+      <img src="assets/img/logo.png" class="big-logo" />
       <h2>Protejează-te împotriva alergiilor</h2>
       <a href="#" class="btn-get-started">Inscrie-te acum</a>
     </div>
