--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand m-auto d-none" href="."><img src="assets/img/logo-green.png" /></a>
+      <a class="navbar-brand m-auto" href="."><img src="assets/img/logo.png" /></a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="icon-bar top-bar"></span>
         <span class="icon-bar middle-bar"></span>
         <span class="icon-bar bottom-bar"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav m-auto">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href=".">Acasă</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">Despre noi</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Servicii</a></li>
@@ -45,8 +45,8 @@
   <!-- Carousel V2 -->
   <section id="carousel">
     <div class="carousel-container">
-      <img src="assets/img/logo.png" class="big-logo" />
-      <h2>Protejează-te împotriva alergiilor</h2>
+      <h1>Protejează-te împotriva alergiilor</h1>
+      <h2>vreo 3 randuri<br />vreo 3 randuri<br />vreo 3 randuri</h2>
       <a href="#" class="btn-get-started">Inscrie-te acum</a>
     </div>
   </section>
@@ -121,11 +121,11 @@
           cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen,
           proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive
           pentru majoritatea oamenilor.</p>
-        
+
 
         <p>Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări
           ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.</p>
-        
+
         <a href="#" class="btn btn-primary">Citește mai multe detalii</a>
       </div>
       <div class="col-lg-6">
