--- a/index.html
+++ b/index.html
@@ -24,29 +24,34 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand m-auto" href="."><img src="assets/img/logo.png" /></a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand m-auto" href=".">
+        <img src="assets/img/logo.png" />
+      </a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="#navbarNav"
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="icon-bar top-bar"></span>
         <span class="icon-bar middle-bar"></span>
         <span class="icon-bar bottom-bar"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href=".">Acasă</a></li>
+          <li class="nav-item menu-active"><a class="nav-link" href=".">Acasă</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">Despre noi</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Servicii</a></li>
+          <li class="nav-item"></li><a class="nav-link" href="#">Servicii</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+          <li class="nav-item"><a class="nav-link" id="login-button" href="#">Login</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Carousel V2 -->
+  <!-- Carousel -->
   <section id="carousel">
     <div class="carousel-container">
       <h1>Protejează-te împotriva alergiilor</h1>
-      <h2>vreo 3 randuri<br />vreo 3 randuri<br />vreo 3 randuri</h2>
+      <h2>vreo 3 randuri
+        <br />vreo 3 randuri
+        <br />vreo 3 randuri</h2>
       <a href="#" class="btn-get-started">Inscrie-te acum</a>
     </div>
   </section>
@@ -54,15 +59,15 @@
   <!--- Jumbotron -->
   <div class="container-fluid">
     <div class="row jumbotron">
-	  <div class="container">
-      <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-        <p class="lead">Bacon ipsum dolor amet boudin pig andouille, buffalo jowl cow venison pork loin frankfurter. Short loin turducken
-          buffalo boudin beef rump ball tip. Pastrami kielbasa pork buffalo swine drumstick. Biltong pancetta chuck ribeye.
-          Porchetta beef hamburger jerky ground round fatback ham hock pig biltong corned beef swine rump bacon beef ribs
-          ball tip.
-        </p>
+      <div class="container">
+        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+          <p class="lead">Bacon ipsum dolor amet boudin pig andouille, buffalo jowl cow venison pork loin frankfurter. Short loin turducken
+            buffalo boudin beef rump ball tip. Pastrami kielbasa pork buffalo swine drumstick. Biltong pancetta chuck ribeye.
+            Porchetta beef hamburger jerky ground round fatback ham hock pig biltong corned beef swine rump bacon beef ribs
+            ball tip.
+          </p>
+        </div>
       </div>
-	  </div>
       <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
         <a href="#">
           <button type="button" class="btn btn-outline-secondary btn-lg">Buton</button>
@@ -117,14 +122,14 @@
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
         <h2>Ce sunt alergiile?</h2>
-        <p>Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt
-          cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen,
-          proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive
-          pentru majoritatea oamenilor.</p>
+        <p>Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule
+          sunt cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau
+          nontoxice (polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste
+          substanțe, care sunt inofensive pentru majoritatea oamenilor.</p>
 
 
-        <p>Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări
-          ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.</p>
+        <p>Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele
+          manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.</p>
 
         <a href="#" class="btn btn-primary">Citește mai multe detalii</a>
       </div>
