--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/fontawesome/fontawesome.min.css" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
 
 	<script src="assets/js/jquery/jquery.min.js"></script>
 	<script src="assets/js/popper/popper.min.js"></script>
@@ -53,42 +54,23 @@
 		</div>
 	</section>
 
-	<!--- Jumbotron -->
-	<div class="container-fluid">
-		<div class="row jumbotron">
-			<div class="container">
-				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-					<p class="lead">Bacon ipsum dolor amet boudin pig andouille, buffalo jowl cow venison pork loin frankfurter. Short loin turducken
-						buffalo boudin beef rump ball tip. Pastrami kielbasa pork buffalo swine drumstick. Biltong pancetta chuck ribeye.
-						Porchetta beef hamburger jerky ground round fatback ham hock pig biltong corned beef swine rump bacon beef ribs
-						ball tip.
-					</p>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-				<a href="#">
-					<button type="button" class="btn btn-outline-secondary btn-lg">Buton</button>
-				</a>
-			</div>
-		</div>
-	</div>
 
 	<!--- Welcome Section -->
 	<div class="container padding">
 		<div class="row welcome text-center">
 			<div class="col-12">
-				<h1 class="display-4">Text frumos</h1>
+				<h1 class="display-4">Good To Know</h1>
 			</div>
 			<hr>
 			<div class="col-12">
-				<p class="lead">Bacon ipsum dolor amet meatball boudin ground round strip steak tri-tip rump bresaola meatloaf meatball boudin ground
-					round strip steak tri-tip rump bresaola meatloaf turkey doner shank.
-				</p>
+						<p class="lead">Alergia este cea mai comuna boala cronica din Europa. Pana la 20% dintre pacientii cu alergii lupta in fiecare zi cu frica
+							de o posibila criza de astm, un soc anafilatic, sau chiar moartea de la o reactie alergica.
+						</p>
 			</div>
 		</div>
 	</div>
 
-	<!--- 3 Column Section -->
+	<!--- Carousel -->
 	<div class="container padding">
 		<div class="row text-center padding">
 			<div class="col-xs-12 col-sm-6 col-md-4">
@@ -227,23 +209,111 @@
 
 		</div>
 	</div>
+<hr class="my-4">
+	<!-- About -->
 
-	<!--- 2 Column Section -->
-	<div class="container padding">
+	<div id="margin" class="container-fluid padding">
 		<div class="row padding">
-			<div class="col-md-12 col-lg-6">
-				<h2>Text mare</h2>
-				<p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
-					spare ribs strip steak turkey.</p>
+			<div class="col-md-12 col-lg-12 text-center">
+				<h2>Cine suntem?</h2>
+				<p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank spare
+					ribs strip steak turkey.</p>
+				
+				<p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa t-bone
+					chicken shankle.</p> <br>
 
-				<p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
-					t-bone chicken shankle.</p>
-				<br>
+			</div> </div>
+		
+		<div class="container text-center">
+			<img class="img-fluid" id="teamPhoto" src="assets/img/placeholder2.png" style="margin-bottom: 25px">
+		</div>
+			<div class="row padding">
+				<div class="col-md-12 col-lg-12 text-center">
+					<h2 style="margin-top: 25px">Ce vrem sa facem?</h2>
+					<p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank spare
+						ribs strip steak turkey.</p>
+			
+					<p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa t-bone
+						chicken shankle.</p>
+
+		</div>
+		</div>
+<section id="team">
+	<div class="container wow fadeInUp">
+		
+		<div class="row">
+			<div class="col-lg-3 col-md-6">
+				<div class="member">
+					<div class="pic">
+						<img src="./assets/img/avatars/2.jpg" alt="">
+					</div>
+					<h4>Iacob Octavian</h4>
+					<div class="aboutsocial">
+						<a target="_blank" class="icon" href="https://www.facebook.com/octavzz">
+							<i class="ion-social-facebook"></i>
+						</a>
+						<a target="_blank" class="icon" href="https://www.instagram.com/octavzz/?hl=en">
+							<i class="ion-social-instagram"></i>
+						</a>
+					</div>
+				</div>
 			</div>
-			<div class="col-lg-6">
-				<img src="assets/img/placeholder3.png" class="img-fluid">
+
+			<div class="col-lg-3 col-md-6">
+				<div class="member">
+					<div class="pic">
+						<img src="./assets/img/avatars/4.jpg" alt="">
+					</div>
+					<h4>Negru Parascheva</h4>
+					<div class="aboutsocial">
+						<a target="_blank" class="icon" href="https://www.facebook.com/parascheva.negru">
+							<i class="ion-social-facebook"></i>
+						</a>
+						<a target="_blank" class="icon" href="https://www.instagram.com/paraschevanegru/">
+							<i class="ion-social-instagram"></i>
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-6">
+				<div class="member">
+					<div class="pic">
+						<img src="./assets/img/avatars/3.jpg" alt="">
+					</div>
+					<h4>Scurtu Claudiu</h4>
+					<div class="aboutsocial">
+						<a target="_blank" class="icon" href="https://www.facebook.com/claudiu.scurtu.3">
+							<i class="ion-social-facebook"></i>
+						</a>
+						<a target="_blank" class="icon" href="https://www.instagram.com/claudiuscurtu/?hl=en">
+							<i class="ion-social-instagram"></i>
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-6">
+				<div class="member">
+					<div class="pic">
+						<img src="./assets/img/avatars/1.jpg" alt="">
+					</div>
+					<h4>Toderică Alexandru</h4>
+					<div class="aboutsocial">
+						<a target="_blank" class="icon" href="https://www.facebook.com/alexandru.toderica">
+							<i class="ion-social-facebook"></i>
+						</a>
+						<a target="_blank" class="icon" href="https://www.instagram.com/toderrrica/">
+							<i class="ion-social-instagram"></i>
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
+
+	</div>
+</section>
+
 	</div>
 
 	<!--- Social Media -->
