--- a/index.html
+++ b/index.html
@@ -71,21 +71,49 @@
 	</div>
 
 	<!--- Carousel -->
-	<div class="container padding">
-		<div class="row text-center padding">
+
+
+	<div class="container-fluid padding">
+		<div class="carousel slide" id="slides" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+				<div class="row text-center padding jumbotron">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-allergies"></i>
+				<h3>Alergiile</h3>
+				<p>-sunt a sasea cauza a bolilor cronice din USA</p>
+			</div>
+
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-globe"></i>
+				<h3>La nivel mondial</h3>
+				<p>-rinita alergica afecteaza intre 10% si 30% din popultie</p>
+			</div>
+
+
+			<div class="col-sm-12 col-md-4">
+				<i class="fas fa-money-bill-alt"></i>
+				<h3>Costul</h3>
+						<p>-anual al alergiilor depaseste 18 miliarde de dolari</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="carousel-item">
+		<div class="row text-center padding jumbotron">
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<i class="fas fa-allergies"></i>
 				<h3>Alergie</h3>
 				<p>Bacon ipsum dolor amet meatball</p>
 			</div>
-
+	
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<i class="fas fa-user-md"></i>
 				<h3>Tratamente</h3>
 				<p>Bacon ipsum dolor amet meatball</p>
 			</div>
-
-
+	
+	
 			<div class="col-sm-12 col-md-4">
 				<i class="fas fa-heart"></i>
 				<h3>Care
@@ -93,8 +121,60 @@
 						<p>Bacon ipsum dolor amet meatball</p>
 			</div>
 		</div>
-		<hr class="my-4">
 	</div>
+
+	<div class="carousel-item">
+		<div class="row text-center padding jumbotron">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-allergies"></i>
+				<h3>Alergie</h3>
+				<p>Bacon ipsum dolor amet meatball</p>
+			</div>
+	
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-user-md"></i>
+				<h3>Tratamente</h3>
+				<p>Bacon ipsum dolor amet meatball</p>
+			</div>
+	
+	
+			<div class="col-sm-12 col-md-4">
+				<i class="fas fa-heart"></i>
+				<h3>Care
+					<3</h3>
+						<p>Bacon ipsum dolor amet meatball</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="carousel-item">
+		<div class="row text-center padding jumbotron">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-allergies"></i>
+				<h3>Alergie</h3>
+				<p>Bacon ipsum dolor amet meatball</p>
+			</div>
+	
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-user-md"></i>
+				<h3>Tratamente</h3>
+				<p>Bacon ipsum dolor amet meatball</p>
+			</div>
+	
+	
+			<div class="col-sm-12 col-md-4">
+				<i class="fas fa-heart"></i>
+				<h3>Care
+					<3</h3>
+						<p>Bacon ipsum dolor amet meatball</p>
+			</div>
+		</div>
+	</div>
+	</div>
+	</div>
+	<hr class="my-4">
+	</div>
+	
 
 	<!--- 2 Column Section -->
 	<div class="container padding">
