am bagat ce am sters din greseala de la claudiu

--- a/index.html
+++ b/index.html
@@ -56,25 +56,44 @@
 	</div>
 
 	<div class="main">
-		<!--- Jumbotron -->
-		<div class="container-fluid">
-			<div class="row jumbotron">
-				<div class="container">
-					<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-						<p class="lead">Bacon ipsum dolor amet boudin pig andouille, buffalo jowl cow venison pork loin frankfurter. Short loin turducken
-							buffalo boudin beef rump ball tip. Pastrami kielbasa pork buffalo swine drumstick. Biltong pancetta chuck ribeye.
-							Porchetta beef hamburger jerky ground round fatback ham hock pig biltong corned beef swine rump bacon beef ribs
-							ball tip.
-						</p>
-					</div>
+		<div class="container padding">
+			<div class="row welcome text-center">
+				<div class="col-12">
+					<h1 class="display-4">Good To Know</h1>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-					<a href="#">
-						<button type="button" class="btn btn-outline-secondary btn-lg">Buton</button>
-					</a>
+				<hr>
+				<div class="col-12">
+							<p class="lead">Alergia este cea mai comuna boala cronica din Europa. Pana la 20% dintre pacientii cu alergii lupta in fiecare zi cu frica
+								de o posibila criza de astm, un soc anafilatic, sau chiar moartea de la o reactie alergica.
+							</p>
 				</div>
 			</div>
 		</div>
+			<div class="container-fluid padding">
+		<div class="carousel slide" id="slides" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+				<div class="row text-center padding jumbotron">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-allergies"></i>
+				<h3>Alergiile</h3>
+				<p>-sunt a sasea cauza a bolilor cronice din USA</p>
+			</div>
+
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-globe"></i>
+				<h3>La nivel mondial</h3>
+				<p>-rinita alergica afecteaza intre 10% si 30% din popultie</p>
+			</div>
+
+
+			<div class="col-sm-12 col-md-4">
+				<i class="fas fa-money-bill-alt"></i>
+				<h3>Costul</h3>
+						<p>-anual al alergiilor depaseste 18 miliarde de dolari</p>
+			</div>
+		</div>
+	</div>
 
 		<!--- Welcome Section -->
 		<div class="container padding">
