--- a/index.html
+++ b/index.html
@@ -56,6 +56,41 @@
 	</div>
 
 	<div class="main">
+		<div class="section">
+			<div class="container text-center">
+				<div class="row">
+                    <div class="col-md-9 ml-auto mr-auto">
+                        <h2 class="title">Ce reprezintă AllergyHelp?</h2>
+                        <h5 class="description">AllergyHelp reprezintă o platformă bazată pe o bază de date a alergiilor ce poate oferi diverse informații despre aceasta. Datorită acestei platforme, aveți acces la următoarele informații:</h5>
+                    </div>
+                </div>
+                <div class="features">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="info">
+                                <i class="fa fa-allergies text-success"></i>
+                                <h4 class="info-title">Baza de date a alergiilor</h4>
+                                <p>Odată înregistrat pe site, vei avea acces la întreaga bază de date a alergiilor ce se actualizează periodic.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="info">
+                                <i class="fa fa-pills text-danger"></i>
+                                <h4 class="info-title">Tratemente</h4>
+                                <p>Pentru fiecare alergie oferim și câte un tratament recomandat de doctori și farmaciști.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="info">
+                                <i class="fa fa-comment-dots text-info"></i>
+                                <h4 class="info-title">Suport</h4>
+                                <p>Dacă nu găsești informația dorită pe AllergyHelp, ai posibilitatea de a ne contacta pentru ajutor.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+			</div>
+		</div>
 		<div class="container padding">
 			<div class="row welcome text-center">
 				<div class="col-12">
