--- a/index.html
+++ b/index.html
@@ -59,36 +59,60 @@
 		<div class="section">
 			<div class="container text-center">
 				<div class="row">
-                    <div class="col-md-9 ml-auto mr-auto">
-                        <h2 class="title">Ce reprezintă AllergyHelp?</h2>
-                        <h5 class="description">AllergyHelp reprezintă o platformă bazată pe o bază de date a alergiilor ce poate oferi diverse informații despre aceasta. Datorită acestei platforme, aveți acces la următoarele informații:</h5>
-                    </div>
-                </div>
-                <div class="features">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="info">
-                                <i class="fa fa-allergies text-success"></i>
-                                <h4 class="info-title">Baza de date a alergiilor</h4>
-                                <p>Odată înregistrat pe site, vei avea acces la întreaga bază de date a alergiilor ce se actualizează periodic.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="info">
-                                <i class="fa fa-pills text-danger"></i>
-                                <h4 class="info-title">Tratemente</h4>
-                                <p>Pentru fiecare alergie oferim și câte un tratament recomandat de doctori și farmaciști.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="info">
-                                <i class="fa fa-comment-dots text-info"></i>
-                                <h4 class="info-title">Suport</h4>
-                                <p>Dacă nu găsești informația dorită pe AllergyHelp, ai posibilitatea de a ne contacta pentru ajutor.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+					<div class="col-md-9 ml-auto mr-auto">
+						<h2 class="title">Ce reprezintă AllergyHelp?</h2>
+						<h5 class="description">AllergyHelp reprezintă o platformă bazată pe o bază de date a alergiilor ce poate oferi diverse informații despre aceasta. Datorită acestei platforme, aveți acces la următoarele informații:</h5>
+					</div>
+				</div>
+				<div class="features">
+					<div class="row">
+						<div class="col-md-4">
+							<div class="info">
+								<i class="fa fa-allergies text-success"></i>
+								<h4 class="info-title">Baza de date a alergiilor</h4>
+								<p>Odată înregistrat pe site, vei avea acces la întreaga bază de date a alergiilor ce se actualizează periodic.</p>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="info">
+								<i class="fa fa-pills text-danger"></i>
+								<h4 class="info-title">Tratemente</h4>
+								<p>Pentru fiecare alergie oferim și câte un tratament recomandat de doctori și farmaciști.</p>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="info">
+								<i class="fa fa-comment-dots text-info"></i>
+								<h4 class="info-title">Suport</h4>
+								<p>Dacă nu găsești informația dorită pe AllergyHelp, ai posibilitatea de a ne contacta pentru ajutor.</p>
+							</div>
+						</div>
+				    </div>
+				</div>
+			</div>
+		</div>
+		<div class="section">
+			<div class="container">
+				<div class="card card-plain card-blog">
+					<div class="row">
+						<div class="col-md-5">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/alergie.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/alergie.jpg'); opacity: 1;"></div>
+							</div>
+						</div>
+						<div class="col-md-7">
+							<h3 class="card-title">
+								Ce sunt alergiile?
+							</h3>
+							<p class="card-description">
+								Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive pentru majoritatea oamenilor.
+								<br />Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.
+							</p>
+					
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="container padding">
@@ -172,26 +196,6 @@
 		</div>
 
 		<!--- 2 Column Section -->
-		<div class="container padding">
-			<div class="row padding">
-				<div class="col-md-12 col-lg-6">
-					<h2>Ce sunt alergiile?</h2>
-					<p>Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule
-						sunt cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau
-						nontoxice (polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste
-						substanțe, care sunt inofensive pentru majoritatea oamenilor.</p>
-
-
-					<p>Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele
-						manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.</p>
-
-					<a href="#" class="btn btn-primary">Citește mai multe detalii</a>
-				</div>
-				<div class="col-lg-6">
-					<img src="assets/img/alergie.jpg" class="img-fluid">
-				</div>
-			</div>
-		</div>
 		<hr class="my-4">
 
 		<!--- Cards Title -->
