linkuri navbar functionale, favicon

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href=".">
+			<a class="navbar-brand link-top" href="#">
 				<img src="assets/img/logo-green.png" />
 			</a>
 			<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="#navbarNav"
@@ -33,9 +33,10 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link" href="about.html">Despre noi</a></li>
-					<li class="nav-item"></li><a class="nav-link" href="#">Servicii</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#introducere">Introducere</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#alergie">Alergie</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#statistica">Statistică</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#noutati">Noutăți</a></li>
 					<li class="nav-item"><a class="nav-link" id="login-button" href="#">Conectare</a></li>
 				</ul>
 			</div>
@@ -56,7 +57,7 @@
 	</div>
 
 	<div class="main">
-		<div class="section">
+		<div class="section" id="introducere">
 			<div class="container text-center">
 				<div class="row">
 					<div class="col-md-9 ml-auto mr-auto">
@@ -89,7 +90,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="section">
+		<div class="section" id="alergie">
 			<div class="container">
 				<div class="card card-plain card-blog">
 					<div class="row">
@@ -119,7 +120,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="section section-image" style="background-image: url('assets/img/crowded-station.jpg')">
+		<div class="section section-image" id="statistica" style="background-image: url('assets/img/crowded-station.jpg')">
 			<div class="container text-center">
 				<div class="row">
 					<div class="col-md-4">
@@ -137,7 +138,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="section">
+		<div class="section" id="noutati">
 			<div class="container">
 				<h2 class="title text-center">Noutăți</h2>
 				<div class="row">
