--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<li class="nav-item"><a class="nav-link link-scroll" href="#alergie">Alergie</a></li>
 					<li class="nav-item"><a class="nav-link link-scroll" href="#statistica">Statistică</a></li>
 					<li class="nav-item"><a class="nav-link link-scroll" href="#noutati">Noutăți</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#echipa">Echipa</a></li>
 					<li class="nav-item"><a class="nav-link" id="login-button" href="#">Conectare</a></li>
 				</ul>
 			</div>
@@ -182,6 +183,78 @@
 							<p class="card-description">
 								Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu vârsta în 80% din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime a pielii.
 							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="section" id="echipa">
+			<div class="container text-center">
+			<div class="row">
+					<div class="col-md-10 ml-auto mr-auto">
+						<h2 class="title">Echipa Discode</h2>
+						<h5 class="description">Noi suntem Discode, o echipă formată din patru elevi de la <strong>Liceul Teoretic de Informatică "Grigore Moisil" Iași</strong>.</h5>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-6 col-md-3">
+						<div class="card card-profile card-plain">
+							<div class="card-header card-avatar">
+								<img class="img" src="assets/img/avatars/2.jpg">
+							</div>
+							<div class="card-body">
+								<h4 class="card-title">Iacob Octavian</h4>
+							</div>
+							<div class="card-footer justify-content-center">
+								<a href="#"><i class="fab fa-facebook-square"></i></a>
+								<a href="#"><i class="fab fa-instagram"></i></a>
+								<a href="#"><i class="fab fa-github"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3">
+						<div class="card card-profile card-plain">
+							<div class="card-header card-avatar">
+								<img class="img" src="assets/img/avatars/4.jpg">
+							</div>
+							<div class="card-body">
+								<h4 class="card-title">Negru Parascheva</h4>
+							</div>
+							<div class="card-footer justify-content-center">
+								<a href="#"><i class="fab fa-facebook-square"></i></a>
+								<a href="#"><i class="fab fa-instagram"></i></a>
+								<a href="#"><i class="fab fa-github"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3">
+						<div class="card card-profile card-plain">
+							<div class="card-header card-avatar">
+								<img class="img" src="assets/img/avatars/3.jpg">
+							</div>
+							<div class="card-body">
+								<h4 class="card-title">Scurtu Claudiu</h4>
+							</div>
+							<div class="card-footer justify-content-center">
+								<a href="#"><i class="fab fa-facebook-square"></i></a>
+								<a href="#"><i class="fab fa-instagram"></i></a>
+								<a href="#"><i class="fab fa-github"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3">
+						<div class="card card-profile card-plain">
+							<div class="card-header card-avatar">
+								<img class="img" src="assets/img/avatars/1.jpg">
+							</div>
+							<div class="card-body">
+								<h4 class="card-title">Toderică Alexandru</h4>
+							</div>
+							<div class="card-footer justify-content-center">
+								<a href="#"><i class="fab fa-facebook-square"></i></a>
+								<a href="#"><i class="fab fa-instagram"></i></a>
+								<a href="#"><i class="fab fa-github"></i></a>
+							</div>
 						</div>
 					</div>
 				</div>
