--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								</div>
 								<div class="col-md-4">
 									<h3 class="title mb-0">Costurile</h3>
-									Anuale ale alergiilor depășește 18 miliarde de dolari.
+									Anuale ale alergiilor depășesc 18 miliarde de dolari.
 								</div>
 							</div>
 						</div>
