sters about.html, fixuri slideshow statistici

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="col-md-4">
 						<div class="info">
 							<i class="fa fa-pills text-danger"></i>
-							<h4 class="info-title">Tratemente</h4>
+							<h4 class="info-title">Tratamente</h4>
 							<p>Pentru fiecare alergie oferim și câte un tratament recomandat de doctori și farmaciști.</p>
 						</div>
 					</div>
@@ -119,67 +119,56 @@
 			</div>
 		</div>
 		<div class="section section-image" id="statistica" style="background-image: url('assets/img/crowded-station.jpg')">
-			<div class="container">
-				<div id="slides" class="carousel-slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#slides" data-slide-to="0" class="active"></li>
-						<li data-target="#slides" data-slide-to="1"></li>
-						<li data-target="#slides" data-slide-to="2"></li>
-					</ol>
+			<div class="container text-center">
+				<div class="carousel slide carousel-fade" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<div class="container text-center">
-								<div class="row">
-									<div class="col-md-4">
-										<h3 class="title mb-0">Alergiile</h3>
-										Sunt a șasea cauză a bolilor cronice din USA.
-									</div>
-									<div class="col-md-4">
-										<h3 class="title mb-0">La nivel mondial</h3>
-										Rinita alergică afectează între 10% și 30% din populație.
-									</div>
-									<div class="col-md-4">
-										<h3 class="title mb-0">Costurile</h3>
-										Anuale ale alergiilor depășesc 18 miliarde de dolari.
-									</div>
+							<div class="row">
+								<div class="col-md-4">
+									<h3 class="title mb-0">Alergiile</h3>
+									Sunt a șasea cauză a bolilor cronice din USA.
+								</div>
+								<div class="col-md-4">
+									<h3 class="title mb-0">La nivel mondial</h3>
+									Rinita alergică afectează între 10% și 30% din populație.
+								</div>
+								<div class="col-md-4">
+									<h3 class="title mb-0">Costurile</h3>
+									Anuale ale alergiilor depășesc 18 miliarde de dolari.
 								</div>
 							</div>
 						</div>
 
 						<div class="carousel-item">
-							<div class="container text-center">
-								<div class="row">
-									<div class="col-md-4">
-										<h3 class="title mb-0">Peste 170 de alimente</h3>
-										Au fost raportate ca factori alergici.
-									</div>
-									<div class="col-md-4">
-										<h3 class="title mb-0">La fiecare 3 minute</h3>
-										O reacție alergică alimentară trimite pe cineva în camera de urgențe.
-									</div>
-									<div class="col-md-4">
-										<h3 class="title mb-0">În 2015</h3>
-										Peste 8.8 milioane de copii au avut alergii de pile.
-									</div>
+							<div class="row">
+								<div class="col-md-4">
+									<h3 class="title mb-0">Peste 170 de alimente</h3>
+									Au fost raportate ca factori alergici.
+								</div>
+								<div class="col-md-4">
+									<h3 class="title mb-0">La fiecare 3 minute</h3>
+									O reacție alergică alimentară trimite pe cineva în camera de urgențe.
+								</div>
+								<div class="col-md-4">
+									<h3 class="title mb-0">În 2015</h3>
+									Peste 8.8 milioane de copii au avut alergii de piele.
 								</div>
 							</div>
 						</div>
 
 						<div class="carousel-item">
-							<div class="container text-center">
-								<div class="row">
-									<div class="col-md-4">
-										<h3 class="title mb-0">Studiile arată că</h3>
-										În urmatorii 5-7 ani unul din doi copii vor prezenta manifestări alergice.
-									</div>
-									<div class="col-md-4">
-										<h3 class="title mb-0">În Europa</h3>
-										Sunt peste 33 de milioane de oameni ce au reacții alergice la ambrozie.
-									</div>
-									<div class="col-md-4">
-										<h3 class="title mb-0">În Romania</h3>
-										Numărul alergicilor la ambrozie s-a dublat în ultimii 2-3 ani.
-									</div>
+							<div class="row">
+								<div class="col-md-4">
+									<h3 class="title mb-0">Studiile arată că</h3>
+									În urmatorii 5-7 ani unul din doi copii vor prezenta manifestări alergice.
+								</div>
+								<div class="col-md-4">
+									<h3 class="title mb-0">În Europa</h3>
+									Sunt peste 33 de milioane de oameni ce au reacții alergice la ambrozie.
+								</div>
+								<div class="col-md-4">
+									<h3 class="title mb-0">În România</h3>
+									Numărul alergicilor la ambrozie s-a dublat în ultimii 2-3 ani.
 								</div>
 							</div>
 						</div>
