briefcase icon & stats++

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li class="nav-item"><a class="nav-link link-scroll" href="#statistica">Statistică</a></li>
 					<li class="nav-item"><a class="nav-link link-scroll" href="#noutati">Noutăți</a></li>
 					<li class="nav-item"><a class="nav-link link-scroll" href="#echipa">Echipa</a></li>
-					<li class="nav-item"><a class="nav-link" id="login-button" href="#">Conectare</a></li>
+					<li class="nav-item"><a class="nav-link" id="login-button" href="#">Autentificare</a></li>
 				</ul>
 			</div>
 		</div>
@@ -74,7 +74,7 @@
 					</div>
 					<div class="col-md-4">
 						<div class="info">
-							<i class="fa fa-pills text-danger"></i>
+							<i class="fas fa-briefcase-medical text-danger"></i>
 							<h4 class="info-title">Tratamente</h4>
 							<p>Pentru fiecare alergie oferim și câte un tratament recomandat de doctori și farmaciști.</p>
 						</div>
@@ -148,6 +148,23 @@
 								<div class="col-md-4">
 									<h3 class="title mb-0">La fiecare 3 minute</h3>
 									O reacție alergică alimentară trimite pe cineva în camera de urgențe.
+								</div>
+								<div class="col-md-4">
+									<h3 class="title mb-0">În 2015</h3>
+									Peste 8.8 milioane de copii au avut alergii de piele.
+								</div>
+							</div>
+						</div>
+
+						<div class="carousel-item">
+							<div class="row">
+								<div class="col-md-4">
+									<h3 class="title mb-0">Până la 57% dintre alergicii la rinită</h3>
+									Au insomnii, ducând la oboseală pe timpul zile, somnolență și la diminuarea funcționării cognitive.
+								</div>
+								<div class="col-md-4">
+									<h3 class="title mb-0">Reacțiile de tip anafilatic</h3>
+									Apar la aproximativ 1 din 1000 oameni din populația generală.
 								</div>
 								<div class="col-md-4">
 									<h3 class="title mb-0">În 2015</h3>
