sters un caracter

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 								<h4 class="card-title">Iacob Octavian</h4>
 							</div>
 							<div class="card-footer justify-content-center">
-								<a href="https://www.facebook.com/octavzz" target="_blank" rel="noopener""><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.facebook.com/octavzz" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
 								<a href="https://www.instagram.com/octavzz" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
 								<a href="https://github.com/Octavzz" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
 							</div>
