--- a/index.html
+++ b/index.html
@@ -79,7 +79,26 @@
 					<li class="nav-item"><a class="nav-link link-scroll" href="#statistica">Statistică</a></li>
 					<li class="nav-item"><a class="nav-link link-scroll" href="#noutati">Noutăți</a></li>
 					<li class="nav-item"><a class="nav-link link-scroll" href="#echipa">Echipa</a></li>
-					<li class="nav-item"><a class="nav-link" id="login-button" href="#">Autentificare</a></li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="login-button" id="dropdown-login" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Autentificare</a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-login">
+							<form action="" method="post" name="login">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<div class="input-group-text"><i class="fas fa-at"></i></div>
+									</div>
+									<input type="text" class="form-control" name="email" id="log-email" placeholder="Email" required="" autocomplete="off" autofocus="">
+								</div>
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<div class="input-group-text"><i class="fas fa-key"></i></div>
+									</div>
+									<input type="password" class="form-control" name="password" id="log-password" placeholder="Parolă" required="">
+								</div>
+								<button class="btn btn-sm btn-block btn-primary font-weight-bold" type="submit" name="login"><i class="fas fa-fw fa-sign-in-alt"></i> Loghează-te</button>
+							</form>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
